# ai-reader-assistant

./: .gitignore  README.md  pyproject.toml  text-reader.service  text_reader_service.py  text_reader_worker.py
